--- a/.travis.yml
+++ b/.travis.yml
@@ -3,28 +3,28 @@ language: python
 matrix:
   include:
     - python: '3.4'
-      env: TOXENV=py34-django18
+      env: TOXENV=py34
     - python: '3.5'
-      env: TOXENV=py35-django18
+      env: TOXENV=py35
 
     - python: '3.4'
-      env: TOXENV=py34-django110
+      env: TOXENV=py34
     - python: '3.5'
-      env: TOXENV=py35-django110
+      env: TOXENV=py35
 
     - python: '3.4'
-      env: TOXENV=py34-django111
+      env: TOXENV=py34
     - python: '3.5'
-      env: TOXENV=py35-django111
+      env: TOXENV=py35
     - python: '3.6'
-      env: TOXENV=py36-django111
+      env: TOXENV=py36
 
     - python: '3.4'
-      env: TOXENV=py34-django20
+      env: TOXENV=py34
     - python: '3.5'
-      env: TOXENV=py35-django20
+      env: TOXENV=py35
     - python: '3.6'
-      env: TOXENV=py36-django20
+      env: TOXENV=py36
 
 install:
   - pip install -U pip wheel setuptools
