--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,15 @@ indexserver=
 [testenv]
 commands=
     py.test htmlprinter tests --pep8
-deps = 
+    coverage run --branch --source=htmlprinter setup.py test
+    coverage report -m
+    coveralls
+deps =
     pytest
     pytest-pep8
+    pytest-runner
+    coverage
+    coveralls
 
 [pytest]
 addopts = -vvl
