--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,8 @@ indexserver=
     pypi = https://pypi.python.org/simple
 
 [testenv]
+passenv = TRAVIS TRAVIS_*
+setenv = PYTHONPATH = {toxinidir}
 commands=
     py.test htmlprinter tests --pep8
     coverage run --branch --source=htmlprinter setup.py test
