--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@ indexserver=
 passenv = TRAVIS TRAVIS_*
 setenv = PYTHONPATH = {toxinidir}
 commands=
-    py.test htmlprinter tests --pep8
-    coverage run --branch --source=htmlprinter setup.py test
+    py.test htmlprint tests --pep8
+    coverage run --branch --source=htmlprint setup.py test
     coverage report -m
     coveralls
 deps =
@@ -24,5 +24,5 @@ deps =
 addopts = -vvl
 pep8maxlinelength=100
 pep8ignore =
-    *.py W293 W503 E401
-    tests/test_htmlprinter.py ALL
+    htmlprint/htmlprint.py W293 W503 E401 E303
+    tests/test_htmlprint.py ALL
